# mipp

./: .gitignore  CMakeLists.txt  README.md  mipp.patch
js/: clock.js  credits.js  dvd.js  house.js  null.js  warhol.js
src/: cairo.hpp  colors.hpp  ezv8.hpp  main.cpp  mipp.cpp  mipp.h
